log/build_2024-08-14_23-47-26/center/stdout_stderr.log
running egg_info
creating ../../build/center/center.egg-info
writing ../../build/center/center.egg-info/PKG-INFO
writing dependency_links to ../../build/center/center.egg-info/dependency_links.txt
writing entry points to ../../build/center/center.egg-info/entry_points.txt
writing requirements to ../../build/center/center.egg-info/requires.txt
writing top-level names to ../../build/center/center.egg-info/top_level.txt
writing manifest file '../../build/center/center.egg-info/SOURCES.txt'
reading manifest file '../../build/center/center.egg-info/SOURCES.txt'
writing manifest file '../../build/center/center.egg-info/SOURCES.txt'
running build
running build_py
creating /home/yvonne/work/src/build/center/build
creating /home/yvonne/work/src/build/center/build/lib
creating /home/yvonne/work/src/build/center/build/lib/center
copying center/tableball.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/__init__.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/yyy_arm_controller.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/boss_strategy_client.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/transformations.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/publisher_dection_boxes.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/arm_controller_v2.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/strategy copy.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/just_pool_think0524.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/publisher_dection_boxes (copy).py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/tableball0520.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/strategy.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/test.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/strategy copy 2.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/tableball (copy).py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/control.py -> /home/yvonne/work/src/build/center/build/lib/center
copying center/just_pool_think0709.py -> /home/yvonne/work/src/build/center/build/lib/center
running install
running install_lib
creating /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/tableball.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/__init__.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/yyy_arm_controller.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/boss_strategy_client.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/transformations.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/publisher_dection_boxes.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/arm_controller_v2.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/strategy copy.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/just_pool_think0524.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/publisher_dection_boxes (copy).py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/tableball0520.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/strategy.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/test.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/strategy copy 2.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/tableball (copy).py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/control.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
copying /home/yvonne/work/src/build/center/build/lib/center/just_pool_think0709.py -> /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/tableball.py to tableball.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/yyy_arm_controller.py to yyy_arm_controller.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/boss_strategy_client.py to boss_strategy_client.cpython-310.pyc
  File "/home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/boss_strategy_client.py", line 377
    res = self.call_hiwin(req)撞球末段點(製具句換長度)D_IO:
                              ^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/transformations.py to transformations.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/publisher_dection_boxes.py to publisher_dection_boxes.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/arm_controller_v2.py to arm_controller_v2.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/strategy copy.py to strategy copy.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/just_pool_think0524.py to just_pool_think0524.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/publisher_dection_boxes (copy).py to publisher_dection_boxes (copy).cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/tableball0520.py to tableball0520.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/strategy.py to strategy.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/test.py to test.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/strategy copy 2.py to strategy copy 2.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/tableball (copy).py to tableball (copy).cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/control.py to control.cpython-310.pyc
byte-compiling /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center/just_pool_think0709.py to just_pool_think0709.cpython-310.pyc
running install_data
creating /home/yvonne/work/src/install/center/share/ament_index
creating /home/yvonne/work/src/install/center/share/ament_index/resource_index
creating /home/yvonne/work/src/install/center/share/ament_index/resource_index/packages
copying resource/center -> /home/yvonne/work/src/install/center/share/ament_index/resource_index/packages
copying package.xml -> /home/yvonne/work/src/install/center/share/center
running install_egg_info
Copying ../../build/center/center.egg-info to /home/yvonne/work/src/install/center/lib/python3.10/site-packages/center-0.0.0-py3.10.egg-info
running install_scripts
Installing publisher_dection_boxes script to /home/yvonne/work/src/install/center/lib/center
Installing strategy script to /home/yvonne/work/src/install/center/lib/center
Installing team_selection script to /home/yvonne/work/src/install/center/lib/center
writing list of installed files to '/home/yvonne/work/src/build/center/install.log'
